Major site updates: UI improvements, blog system, authentication, and content updates
- Updated button styles to gunmetal/OD green theme (removed rainbow gradient)
- Converted blog to Markdown with GFM support and tab-based preview
- Added tagging system for blog posts with comma-separated tags
- Redesigned blog to minimal text-based style 'Tales from the Foxhole'
- Added published_at date field for posts with custom date management
- Added obfuscated reply-by-email links to blog posts
- Updated About page to first-person narrative
- Made About page values section more humble
- Updated 'My Kit' section with Go, Charm, Pears, and Freedom Tech
- Added military humor to 'What I Actually Do' section
- Created Legal/Terms page with fun military-themed disclaimer
- Added HTTP Basic Authentication to admin area
- Updated all GitHub links from 11bDev-FOB to 11bDev
- Improved footer layout (3x3 menu distribution, better spacing)
- Fixed navigation and routing conflicts
- Removed Open Source page from navigation
- Updated homepage messaging and CTAs

--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     environment:
       - RAILS_ENV=production
-      - RAILS_MASTER_KEY=e296d0b7c9997c18968abb26920231df
+      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
       - RAILS_SERVE_STATIC_FILES=true
       - RAILS_LOG_TO_STDOUT=true
       - DISABLE_DATABASE_ENVIRONMENT_CHECK=1
