--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-# GitHub API Token (for private repo access)
-# Create at: https://github.com/settings/tokens
-# Required scopes: repo, read:org
-GITHUB_TOKEN=your_github_token_here
+# Rails Master Key (keep secret, do not commit actual value)
+RAILS_MASTER_KEY=
 
-# Twitter/X API Credentials (optional)
-# Get from: https://developer.twitter.com/en/portal/dashboard
-TWITTER_BEARER_TOKEN=your_twitter_bearer_token_here
-TWITTER_API_KEY=your_api_key_here
-TWITTER_API_SECRET=your_api_secret_here
+# GitHub API Token (optional, for higher rate limits)
+# Create at: https://github.com/settings/tokens
+# Recommended scopes: read:org (public org reads)
+GITHUB_TOKEN=
+
+# SMTP settings (only if you enable ActionMailer in production)
+SMTP_ADDRESS=
+SMTP_PORT=587
+SMTP_DOMAIN=11b.dev
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_AUTH=plain
