Add comprehensive Flutter admin app development prompt
- Created FLUTTER_ADMIN_PROMPT.md with full instructions for building cross-platform admin app
- Includes complete API integration with authentication
- Provides ready-to-use Dart code for all major components (login, posts, projects)
- Covers UI implementation with Markdown editor and military-themed design
- Includes data models, services, testing, and deployment instructions
- Supports desktop (Linux/macOS/Windows) and mobile (iOS/Android)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
+# Rails Configuration
 # Rails Master Key (keep secret, do not commit actual value)
+# Get from: config/master.key
 RAILS_MASTER_KEY=
+
+# Admin Authentication
+# Used for HTTP Basic Auth on /admin routes
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=changeme
 
 # GitHub API Token (optional, for higher rate limits)
 # Create at: https://github.com/settings/tokens
