--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,45 @@
 11b.dev www.11b.dev {
-    reverse_proxy app:80
+    # Reverse proxy to Rails app
+    reverse_proxy app:80 {
+        # Health check
+        health_uri /up
+        health_interval 10s
+        health_timeout 5s
+    }
+    
+    # Enable compression
+    encode gzip
+    
+    # Security headers
+    header {
+        # HSTS
+        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+        # Prevent MIME type sniffing
+        X-Content-Type-Options "nosniff"
+        # Clickjacking protection
+        X-Frame-Options "SAMEORIGIN"
+        # XSS protection
+        X-XSS-Protection "1; mode=block"
+        # Referrer policy
+        Referrer-Policy "strict-origin-when-cross-origin"
+        # Remove server header
+        -Server
+    }
+    
+    # Logging
+    log {
+        output file /data/access.log
+        format console
+    }
 }
 
 # Fallback for any other requests (including localhost)
 :80 {
-    reverse_proxy app:80
+    reverse_proxy app:80 {
+        health_uri /up
+        health_interval 10s
+        health_timeout 5s
+    }
+    
+    encode gzip
 }
